hphp/test/quick/fail_86sinit.php.expectf
Fatal error: Class undefined: Z in %s/test/quick/fail_86sinit.php on line 4
vec(6) {
  int(16777217)
  string(18) "Class undefined: Z"
  string(%d) "%s/test/quick/fail_86sinit.php"
  int(4)
  dict(0) {
  }
  vec(3) {
    dict(2) {
      ["file"]=>
      string(%d) "%s/test/quick/fail_86sinit.php"
      ["line"]=>
      int(4)
    }
    dict(4) {
      ["file"]=>
      string(%d) "%s/test/quick/fail_86sinit.php"
      ["line"]=>
      int(12)
      ["function"]=>
      string(4) "test"
      ["args"]=>
      vec(0) {
      }
    }
    dict(2) {
      ["function"]=>
      string(23) "entrypoint_fail_86sinit"
      ["args"]=>
      vec(0) {
      }
    }
  }
}